# nettools

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/get-ext-ipv4-by-stun/: CMakeLists.txt  main.c
examples/get-ip-by-domain-name/: CMakeLists.txt  main.c
include/nettools/: netstructures.h  nettools.h  xsocket.h
src/nettools/: nettools.c
xsocket/: CMakeLists.txt
xsocket/include/xsocket/: xsocket.h
xsocket/src/xsocket/: xsocket.c
